# Cytosim

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  docker.sh
.github/workflows/: build.yml
configs/: free_barbed_end_final.cym
cytosim.xcodeproj/: project.pbxproj
src/: CMakeLists.txt
src/base/: CMakeLists.txt
src/disp/: CMakeLists.txt  display.h  display1.cc  display2.cc  display3.cc  miniz.c  save_image.cc  save_image.h  spng.c  view_prop.cc
src/math/: CMakeLists.txt  dim.h
src/play/: CMakeLists.txt  makefile.inc  player.h
src/sim/: CMakeLists.txt  chain.cc  chain.h  fiber_prop.cc  fiber_set.cc  field_prop.cc  interface.cc  interface.h  parser.cc  parser.h  sim_thread.cc  simul.h  simul_report.cc
src/sim/hands/: cutter_prop.cc
src/sim/spaces/: space_polygon.cc
src/test/: CMakeLists.txt  test_code.cc  test_glapp.cc  test_glut.cc  test_grid.cc  test_opengl.cc  test_platonic.cc  test_space.cc  test_sphere.cc
src/tools/: CMakeLists.txt
